--- a/instagramwebclone.css
+++ b/instagramwebclone.css
@@ -4,7 +4,14 @@
   color: gray;
   background-position: 40%;
   background-size: 6%;
-  background-image: url(search-solid.svg);
+  background-image: url(assets/search-solid.svg) ;
+  background-repeat: no-repeat;
+  
+  background-position: 2px 5px;
+  padding: 2px 2px 2px 2px;
+}
+::placeholder :hover{
+  color: transparent;
 }
 
 input.empty {
